# ScrumPoker

./: .dockerignore  .gitignore  README.md  biome.json  docker-compose.yml  package-lock.json  package.json  server.ts  wrangler.toml
.kiro/specs/scrum-poker-app/: design.md  requirements.md  tasks.md
.wrangler/tmp/bundle-y4SMGy/: middleware-insertion-facade.js  middleware-loader.entry.ts
.wrangler/tmp/dev-vprEK0/: 5a3f97dea4683220dab8d939d140db24a1b55b6e-index.wasm  shim.js  shim.js.map
app/: layout.tsx  page.tsx
app/room/[id]/: page.tsx
components/: PokerCard.tsx  UserList.tsx
docker/: frontend.Dockerfile  worker.Dockerfile
lib/: socket.ts
scripts/: build-worker.sh
web/: index.html  package-lock.json  package.json  tailwind.config.ts
web/src/: App.tsx
web/src/pages/: HomePage.tsx  RoomPage.tsx
web/src/types/: messages.ts
web/src/utils/: room.ts
worker/: Cargo.toml
worker/src/: durable.rs  lib.rs  messages.rs  models.rs  router.rs  utils.rs  websocket.rs
