[package]
name = "scrum_poker_worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
web-sys = "=0.3.66"
js-sys = "=0.3.66"
worker = "0.0.23"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
thiserror = "1"
wee_alloc = { version = "0.4", optional = true }
log = "0.4"
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
